examples/fail/invalid_token.uplp
-- category = "error"
--
-- [metadata]
-- error = "Parse.invalid_token"
--
-- [metadata.expectation]
-- tok = '~'
~